--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -23,22 +23,23 @@ modules:
     install:
       - micro
       - starship
-    remove:
-      # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
-      - firefox
-      - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - zsh
+      - alacritty
+      - nvim
+    # remove:
+      # - firefox
+      # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
 
-  - type: default-flatpaks
-    notify: true # Send notification after install/uninstall is finished (true/false)
-    system:
+  # - type: default-flatpaks
+    # notify: true # Send notification after install/uninstall is finished (true/false)
+    # system:
       # If no repo information is specified, Flathub will be used by default
-      install:
-        - org.mozilla.firefox
-        - org.gnome.Loupe
-      remove:
-        - org.gnome.eog
-    user: {} # Also add Flathub user repo, but no user packages
+      # install:
+        # - org.mozilla.firefox
+        # - org.gnome.Loupe
+      # remove:
+        # - org.gnome.eog
+    # user: {} # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
