Fix neovim name

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -25,7 +25,7 @@ modules:
       - starship
       - zsh
       - alacritty
-      - nvim
+      - neovim
     # remove:
       # - firefox
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
