--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -40,6 +40,10 @@ modules:
       # remove:
         # - org.gnome.eog
     # user: {} # Also add Flathub user repo, but no user packages
+  - type: fonts
+    fonts:
+      nerd-fonts:
+        - Meslo
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
