--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -26,6 +26,7 @@ modules:
       - zsh
       - alacritty
       - neovim
+      - docker
     # remove:
       # - firefox
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
