--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -31,6 +31,9 @@ modules:
       - fuzzel
       - waybar
       - niri
+      - swaybg
+      - swayidle
+      - mako
     # remove:
       # - firefox
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
