--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -21,6 +21,7 @@ modules:
     repos:
       - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://copr.fedorainfracloud.org/coprs/yalter/niri/repo/fedora-%OS_VERSION%/yalter-niri-fedora-%OS_VERSION%.repo
+      - https://repository.mullvad.net/rpm/stable/mullvad.repo
     install:
       - micro
       - starship
@@ -34,6 +35,7 @@ modules:
       - swaybg
       - swayidle
       - mako
+      - mullvad-vpn
     # remove:
       # - firefox
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
