--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -22,6 +22,7 @@ modules:
       - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://copr.fedorainfracloud.org/coprs/yalter/niri/repo/fedora-%OS_VERSION%/yalter-niri-fedora-%OS_VERSION%.repo
       - https://repository.mullvad.net/rpm/stable/mullvad.repo
+      - https://copr.fedorainfracloud.org/coprs/yalter/niri/repo
     install:
       - micro
       - starship
@@ -36,6 +37,7 @@ modules:
       - swayidle
       - mako
       - mullvad-vpn
+      - NetworkManager-tui
     # remove:
       # - firefox
       # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
